[package]
name = "excalibur23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["macros"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"]}
tracing = "0.1.37"
tracing-subscriber = "0.3"
dotenvy = "0.15.6"
